# mkdocs-ai-summary

./: .gitattributes  .gitignore  LICENSE  _ai_summary_cache_chatgpt.json  _ai_summary_cache_tongyi.json  mkdocs.yml  pyproject.toml  readme.md
.github/workflows/: pythoh-package-publish.yml
docs/: index.md  translate.md  withh1.md  withouth1.md
mkdocs-ai-summary/: plugin.py  pyproject.yml  tongyi_api.py
mkdocs_ai_summary/: cache.py  chatgpt_api.py  plugin.py  tongyi_api.py
site/: 404.html  index.html
site/translate/: index.html
site/withh1/: index.html
site/withouth1/: index.html
